fixed spacing for nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -92,8 +92,7 @@ header {
   transition: color 0.15s;
   -webkit-tap-highlight-color: transparent;
   padding: 0;
-  padding-top: 16px;
-  padding-bottom: 0;
+  padding-bottom: 20px;
 }
 
 .nav-item::before {
